# subtitle_translator

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  generate_mo.sh  pyproject.toml  requirements.txt  subtitle_translator.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
locale/en/LC_MESSAGES/: default.po  messages.po
locale/zh/LC_MESSAGES/: default.po  messages.po
src/subtitle_translator/: __init__.py  cli.py  config.py  logger.py  openai_client.py  srt_translator.py
src/subtitle_translator/location_utils/: config.py  location.py
tests/: __init__.py  test_subtitle_translator.py
