[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle_translator"
version = "0.1.0"
description = "Python project using AI for subtitle translatio."
readme = "README.rst"
authors = [
  {name = "Tyrion", email = "maple_leaf_7@msn.com"}
]
maintainers = [
  {name = "Tyrion", email = "maple_leaf_7@msn.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/tyrion-wang/subtitle_translator/issues"
changelog = "https://github.com/tyrion-wang/subtitle_translator/blob/master/changelog.md"
homepage = "https://github.com/tyrion-wang/subtitle_translator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

