[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subtransAI"
version = "1.0.4"
description = "Python project using AI for subtitle translation."
readme = "README.rst"
authors = [
  {name = "Tyrion", email = "maple_leaf_7@msn.com"}
]
maintainers = [
  {name = "Tyrion", email = "maple_leaf_7@msn.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "typer~=0.13.1",
    "openai~=1.55.0",
    "srt~=3.5.3",
    "rich~=13.9.4",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/tyrion-wang/subtitle_translator/issues"
changelog = "https://github.com/tyrion-wang/subtitle_translator/blob/master/changelog.md"
homepage = "https://github.com/tyrion-wang/subtitle_translator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[project.scripts]
subtransAI = "subtitle_translator.cli:app"